<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name">Currency</string>

  <string name="add">Add</string>
  <string name="refresh">Refresh</string>
  <string name="help">Help</string>
  <string name="settings">Settings</string>
  <string name="built">Built %s</string>
  <string name="copyright">Copyright \u00A9 2016 Bill Farmer\nChart by
  <a href="https://github.com/PhilJay/MPAndroidChart">MPAndroidChart</a>\nUkrainian
  translation by <a href="https://github.com/personaljesusua">Vladyslav
  Pohrebniakov</a>\nGerman translation by <a href="https://github.com/l1am0">L1am0</a>\nFrench translation by <a href="https://github.com/RealAestan">Aestan</a>
  </string>
  <string name="licence">Licence <a href="https://www.gnu.org/licenses/gpl.txt">GNU GPLv3</a>
  </string>

  <string name="remove">Remove</string>
  <string name="select">Select</string>
  <string name="copy">Copy</string>
  <string name="clear">Clear</string>
  <string name="cancel">Cancel</string>
  <string name="chart">Chart</string>
  <string name="theme">Theme</string>

  <string name="range">Range</string>
  <string name="week">Week</string>
  <string name="month">Month</string>
  <string name="quarter">Quarter</string>
  <string name="year">Year</string>
  <string name="years">5 Years</string>
  <string name="max">Max</string>

  <string name="invert">Invert</string>
  <string name="new_chart">New chart</string>
  <string name="hist">Historical</string>

  <string name="euro_name">EUR</string>
  <string name="euro_symbol">€</string>
  <string name="num_one">1</string>
  <string name="not_updated">Not updated</string>
  <string name="updated">Updated: %s</string>
  <string name="ok">OK</string>
  <string name="updating">Updating</string>
  <string name="failed">Failed</string>
  <string name="no_connection">No connection</string>
  <string name="no_wifi">No WiFi</string>
  <string name="roaming">Roaming</string>
  <string name="update_failed">Update failed</string>

  <string name="decimal">Enter decimal value</string>
  <string name="digits">0123456789,.</string>

  <string name="pref_about">About</string>
  <string name="pref_about_summ">Currency <a href="https://github.com/billthefarmer/currency/releases/latest">version %s</a></string>
  <string name="pref_update_category">Update</string>
  <string name="pref_wifi">WiFi</string>
  <string name="pref_wifi_summ">Update on WiFi only</string>
  <string name="pref_roaming">Roaming</string>
  <string name="pref_roaming_summ">Update while roaming</string>
  <string name="pref_select">Selection</string>
  <string name="pref_select_summ">Select all when touched</string>
  <string name="pref_numbers">Numbers</string>
  <string name="pref_digits">Fraction digits</string>
  <string name="pref_digit_default">3</string>
  <string name="pref_fill">Fill</string>
  <string name="pref_fill_summ">Fill the chart trace</string>
  <string name="pref_dark">Dark</string>
  <string name="pref_dark_summ">Use dark theme</string>

  <string name="long_aud">Australian dollar</string>
  <string name="long_bgn">Bulgarian lev</string>
  <string name="long_brl">Brasilian real</string>
  <string name="long_cad">Canadian dollar</string>
  <string name="long_chf">Swiss franc</string>
  <string name="long_cny">Chinese yuan renminbi</string>
  <string name="long_czk">Czech koruna</string>
  <string name="long_dkk">Danish krone</string>
  <string name="long_eur">Euro</string>
  <string name="long_gbp">Pound sterling</string>
  <string name="long_hkd">Hong Kong dollar</string>
  <string name="long_hrk">Croatian kuna</string>
  <string name="long_huf">Hungarian forint</string>
  <string name="long_idr">Indonesian rupiah</string>
  <string name="long_ils">Israeli shekel</string>
  <string name="long_inr">Indian rupee</string>
  <string name="long_isk">Icelandic krona</string>
  <string name="long_jpy">Japanese yen</string>
  <string name="long_krw">South Korean won</string>
  <string name="long_mxn">Mexican peso</string>
  <string name="long_myr">Malaysian ringgit</string>
  <string name="long_nok">Norwegian krone</string>
  <string name="long_nzd">New Zealand dollar</string>
  <string name="long_php">Philippine peso</string>
  <string name="long_pln">Polish zloty</string>
  <string name="long_ron">Romanian leu</string>
  <string name="long_rub">Russian rouble</string>
  <string name="long_sek">Swedish krona</string>
  <string name="long_sgd">Singapore dollar</string>
  <string name="long_thb">Thai baht</string>
  <string name="long_try">Turkish lira</string>
  <string name="long_usd">US dollar</string>
  <string name="long_zar">South African rand</string>

  <string name="button1string">1</string>
  <string name="button2string">2</string>
  <string name="button3string">3</string>
  <string name="button4string">4</string>
  <string name="button5string">5</string>
  <string name="button6string">6</string>
  <string name="button7string">7</string>
  <string name="button8string">8</string>
  <string name="button9string">9</string>

  <string name="button0string">0</string>
  <string name="button00string">00</string>
  <string name="button000string">000</string>

  <string name="buttonCancelstring">C</string>
  <string name="buttonEnterstring">OK</string>
  <string name="buttonDecimalDeviderstring">.</string>
</resources>
