<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="3dp"
    android:orientation="vertical"
    tools:ignore="RtlHardcoded"
   >


    <ImageView
        android:id="@+id/flag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:src="@drawable/flag_eur"


        app:layout_constraintStart_toStartOf="@id/button1view"
        app:layout_constraintTop_toTopOf="parent"

        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/euro_name"
        android:gravity="top"
        android:layout_marginLeft="8dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        app:layout_constraintLeft_toRightOf="@id/flag"
        app:layout_constraintTop_toTopOf="@id/flag"
        app:layout_constraintBottom_toTopOf="@id/long_name"

        />

    <TextView
        android:id="@+id/symbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/euro_symbol"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_marginRight="2dp"
        android:layout_marginLeft="4dp"
        app:layout_constraintBottom_toBottomOf="@id/name"
        app:layout_constraintTop_toTopOf="@+id/name"
        app:layout_constraintLeft_toRightOf="@id/name"
        app:layout_constraintRight_toLeftOf="@id/edit" />


    <TextView
        android:id="@+id/edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        android:text="@string/num_one"
        android:layout_marginLeft="8dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        app:layout_constraintTop_toTopOf="@id/symbol"
        app:layout_constraintLeft_toRightOf="@id/symbol" />

    <TextView
        android:id="@+id/long_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/long_eur"

        android:textAppearance="?android:attr/textAppearanceMedium"
        app:layout_constraintLeft_toLeftOf="@id/name"
        app:layout_constraintTop_toBottomOf="@id/name"
        app:layout_constraintBottom_toTopOf="@id/date"/>

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/not_updated"
        android:gravity="left"
        android:textAppearance="?android:attr/textAppearanceSmall"
        app:layout_constraintTop_toBottomOf="@id/long_name"
        app:layout_constraintLeft_toLeftOf="@id/button1view"
        app:layout_constraintBottom_toTopOf="@id/button1view"
        />

    <TextView
        android:id="@+id/status"
        android:layout_width="@dimen/constrainted"
        android:layout_height="@dimen/constrainted"
        android:gravity="right"
        android:layout_marginRight="5dp"
        android:text="@string/ok"
        android:textAppearance="?android:attr/textAppearanceSmall"
        app:layout_constraintBottom_toBottomOf="@id/date"
        app:layout_constraintRight_toRightOf="@id/buttonDecimalDeviderview"
        app:layout_constraintTop_toTopOf="@id/date"
        app:layout_constraintLeft_toLeftOf="@id/date"


        />

    <Button
        android:id="@+id/button1view"
        android:layout_width="wrap_content"
        app:layout_constraintHorizontal_chainStyle="spread"
        android:layout_height="wrap_content"
        android:text="@string/button1string"

        app:layout_constraintWidth_max="@dimen/number_button_width"
        app:layout_constraintTop_toBottomOf="@id/date"

        app:layout_constrainedWidth="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/button2view" />

    <Button
        android:id="@+id/button2view"
        android:layout_width="wrap_content"
        app:layout_constraintHorizontal_chainStyle="spread"
        android:layout_height="wrap_content"
        android:text="@string/button2string"
        app:layout_constraintTop_toBottomOf="@id/date"
        app:layout_constraintLeft_toRightOf="@id/button1view"
        app:layout_constraintRight_toLeftOf="@id/button3view"
        app:layout_constraintWidth_max="@dimen/number_button_width"
        app:layout_constrainedWidth="true" />

    <Button
        android:id="@+id/button3view"
        android:layout_width="wrap_content"
        app:layout_constraintHorizontal_chainStyle="spread"
        android:layout_height="wrap_content"
        android:text="@string/button3string"
        app:layout_constraintTop_toBottomOf="@id/date"
        app:layout_constraintLeft_toRightOf="@id/button2view"
        app:layout_constraintRight_toLeftOf="@id/button0view"
        app:layout_constraintWidth_max="@dimen/number_button_width"
        app:layout_constrainedWidth="true" />

    <Button
        android:id="@+id/button4view"
        android:layout_width="@dimen/number_button_width"
        android:layout_height="wrap_content"
        android:text="@string/button4string"
        app:layout_constraintTop_toBottomOf="@id/button2view"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/button5view"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintWidth_max="@dimen/number_button_width"
        app:layout_constrainedWidth="true" />

    <Button
        android:id="@+id/button5view"
        android:layout_width="@dimen/number_button_width"
        android:layout_height="wrap_content"
        android:text="@string/button5string"
        app:layout_constraintTop_toBottomOf="@id/button1view"
        app:layout_constraintLeft_toRightOf="@id/button4view"
        app:layout_constraintRight_toLeftOf="@id/button6view"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintWidth_max="@dimen/number_button_width"
        app:layout_constrainedWidth="true" />

    <Button
        android:id="@+id/button6view"
        android:layout_width="@dimen/number_button_width"
        android:layout_height="wrap_content"
        android:text="@string/button6string"
        app:layout_constraintTop_toBottomOf="@id/button3view"
        app:layout_constraintLeft_toRightOf="@id/button5view"
        app:layout_constraintRight_toLeftOf="@id/button00view"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintWidth_max="@dimen/number_button_width"
        app:layout_constrainedWidth="true" />

    <Button
        android:id="@+id/button7view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button7string"
        app:layout_constraintTop_toBottomOf="@id/button4view"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/button8view"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintWidth_max="@dimen/number_button_width"
        app:layout_constrainedWidth="true" />

    <Button
        android:id="@+id/button8view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button8string"
        app:layout_constraintTop_toBottomOf="@id/button4view"
        app:layout_constraintLeft_toRightOf="@id/button7view"
        app:layout_constraintRight_toLeftOf="@id/button9view"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintWidth_max="@dimen/number_button_width"
        app:layout_constrainedWidth="true" />

    <Button
        android:id="@+id/button9view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button9string"
        app:layout_constraintTop_toBottomOf="@id/button4view"
        app:layout_constraintLeft_toRightOf="@id/button8view"
        app:layout_constraintRight_toRightOf="@id/button000view"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintWidth_max="@dimen/number_button_width"
        app:layout_constrainedWidth="true" />

    <Button
        android:id="@+id/button0view"
        android:layout_width="@dimen/zero_button_width"
        android:layout_height="wrap_content"
        android:text="@string/button0string"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constrainedWidth="true"
        app:layout_constraintTop_toBottomOf="@id/date"
        app:layout_constraintLeft_toRightOf="@id/button3view"
        app:layout_constraintRight_toLeftOf="@id/buttonDecimalDeviderview"

        />

    <Button
        android:id="@+id/button00view"
        android:layout_width="@dimen/zero_button_width"
        android:layout_height="wrap_content"
        android:text="@string/button00string"

        app:layout_constrainedWidth="true"
        app:layout_constraintTop_toBottomOf="@id/button1view"
        app:layout_constraintLeft_toRightOf="@id/button6view"
        app:layout_constraintRight_toLeftOf="@id/buttonCancelview"

        />

    <Button
        android:id="@+id/button000view"
        android:layout_width="@dimen/zero_button_width"
        android:layout_height="wrap_content"
        android:text="@string/button000string"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constrainedWidth="true"
        app:layout_constraintTop_toBottomOf="@id/button4view"
        app:layout_constraintLeft_toRightOf="@id/button9view"
        app:layout_constraintRight_toLeftOf="@id/buttonEnterview"

        />

    <Button
        android:id="@+id/buttonCancelview"
        android:layout_width="@dimen/control_button_width"
        android:layout_height="wrap_content"
        android:text="@string/buttonCancelstring"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constrainedWidth="true"
        app:layout_constraintTop_toBottomOf="@id/buttonDecimalDeviderview"
        app:layout_constraintLeft_toRightOf="@id/button00view"
        app:layout_constraintRight_toRightOf="parent"
        android:textColor="@color/red"

        />

    <Button
        android:id="@+id/buttonEnterview"
        android:layout_width="@dimen/control_button_width"
        android:layout_height="wrap_content"
        android:text="@string/buttonEnterstring"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constrainedWidth="true"
        app:layout_constraintTop_toBottomOf="@id/buttonCancelview"
        app:layout_constraintLeft_toRightOf="@id/button000view"
        app:layout_constraintRight_toRightOf="parent"
        android:textColor="@color/green"

        />

    <Button
        android:id="@+id/buttonDecimalDeviderview"
        android:layout_width="@dimen/control_button_width"
        android:layout_height="wrap_content"
        android:text="@string/buttonDecimalDeviderstring"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constrainedWidth="true"
        app:layout_constraintTop_toBottomOf="@id/date"
        app:layout_constraintLeft_toRightOf="@id/button0view"
        app:layout_constraintRight_toRightOf="parent" />

        <ListView
            android:id="@+id/list"
            android:layout_width="@dimen/constrainted"
            android:layout_height="@dimen/constrainted"
            android:layout_margin="5dp"
            app:layout_constraintTop_toBottomOf="@id/button9view"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="@+id/button7view"
            app:layout_constraintRight_toRightOf="@id/buttonEnterview"
            />




</android.support.constraint.ConstraintLayout>